syntax = "proto3";

package project.planton.shared.foreignkey.v1;

import "project/planton/shared/cloudresourcekind/cloud_resource_kind.proto";
import "google/protobuf/descriptor.proto";
import "buf/validate/validate.proto";

// Extend google.protobuf.FieldOptions to store default kind & field path metadata
extend google.protobuf.FieldOptions {
  project.planton.shared.cloudresourcekind.CloudResourceKind default_kind = 200001;
  string default_kind_field_path = 200002;
}

// ValueFromRef describes a reference to another resource field (kind, env, name, field_path).
message ValueFromRef {
  project.planton.shared.cloudresourcekind.CloudResourceKind kind = 1;
  string env = 2 [
    (buf.validate.field).required = true
  ];
  string name = 3 [
    (buf.validate.field).required = true
  ];
  string field_path = 4;
}

// Oneof-based message for string literal vs. reference
message StringValueOrRef {
  oneof literal_or_ref {
    // A literal string value:
    string value = 1;

    // A reference to another resource’s field:
    ValueFromRef value_from = 2;
  }
}

// Oneof-based message for int32 literal vs. reference
message Int32ValueOrRef {
  oneof literal_or_ref {
    // A literal int value:
    int32 value = 1;

    // A reference to another resource’s field:
    ValueFromRef value_from = 2;
  }
}
